--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -8,22 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-<nav><a href="/login"><img id="logo" class="logo" src="/assets/img/logo.png" alt="logo"/></a>
-    <button class="btn btn-link navlink"><a href="/logout">Log out</a></button>
-    <button class="btn btn-link navlink"><a href="/boards">Boards</a></button>
-</nav>
-<section id="changePassword">
-    <form id="changePasswordForm" name="changePasswordForm" action="/changePassword" method="POST" class="mainForm">
-        <input id="oldPass" class="formInput" type="password" name="oldPass" placeholder="Old Password"/>
-        <input id="newPass" class="formInput" type="password" name="newPass" placeholder="New Password"/>
-        <input id="newPass2" class="formInput" type="password" name="newPass2" placeholder="Retype New Password"/>
-        <input type="hidden" name="_csrf" value={{csrfToken}} />
-        <input class="formSubmit" type="submit" value="Change Password" />
-    </form>
+<section id="404">
+    <div id="message">
+        <img id="sadlogo" class="sadlogo" src="/assets/img/sadlogo.png" alt="sad logo"/>
+        <p>404 Error:</p>
+        <p>{{url}} is not a page</p>
+    </div>
 </section>
-<div id="consoleMessage" class="required">
-    <h3><span id="errorMessage"></span></h3>
-</div>
 <script src="/assets/bundle.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
