--- a/views/upgrade.handlebars
+++ b/views/upgrade.handlebars
@@ -9,17 +9,17 @@
 </head>
 <body>
 <nav><a href="/login"><img id="logo" class="logo" src="/assets/img/logo.png" alt="logo"/></a>
-    <button class="btn btn-primary navlink"><a href="/logout">Log out</a></button>
-    <button class="btn btn-primary navlink"><a href="/boards">Boards</a></button>
+    <button class="btn btn-link navlink"><a href="/logout">Log out</a></button>
+    <button class="btn btn-link navlink"><a href="/boards">Boards</a></button>
 </nav>
 
 <section id="boards">
     <div id="upgradeDesc">
         <h3>Plans</h3>
-        <p>15 boards: $9.99/month</p><button class="btn btn-primary">Buy</button>
-        <p>30 boards: $14.99/month</p><button class="btn btn-primary">Buy</button>
-        <p>45 boards: $19.99/month</p><button class="btn btn-primary">Buy</button>
-        <p>60 boards: $24.99/month</p><button class="btn btn-primary">Buy</button>
+        <p>15 boards: $9.99/month</p><button class="upgradeBtn">Buy</button><br/>
+        <p>30 boards: $14.99/month</p><button class="upgradeBtn">Buy</button><br/>
+        <p>45 boards: $19.99/month</p><button class="upgradeBtn">Buy</button><br/>
+        <p>60 boards: $24.99/month</p><button class="upgradeBtn">Buy</button><br/>
     </div>
 </section>
 
