Minor view edits

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,8 +15,8 @@
   <section id="login">
     <form id="loginForm" name="loginForm" action="/login" method="POST" class="mainForm">
     <div class="row">
-      <input class="formInput" id="user" type="text" name="username" placeholder="username" required/>
-      <input class="formInput" id="pass" type="password" name="pass" placeholder="password" required/>
+      <input class="formInput" id="user" type="text" name="username" placeholder="username"/>
+      <input class="formInput" id="pass" type="password" name="pass" placeholder="password"/>
     </div>
     <div class="row">
       <input type="hidden" name="_csrf" value={{csrfToken}} />
