--- a/views/changePass.handlebars
+++ b/views/changePass.handlebars
@@ -21,7 +21,7 @@
         <input class="formSubmit" type="submit" value="Change Password" />
     </form>
 </section>
-<div id="consoleMessage" class="required">
+<div id="loginConsoleMessage" class="required">
     <h3><span id="errorMessage"></span></h3>
 </div>
 <script src="/assets/bundle.js"></script>
