--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -27,7 +27,7 @@
       </div>
     </form>
   </section>
-  <div id="consoleMessage" class="required">
+  <div id="loginConsoleMessage" class="required">
       <h3><span id="errorMessage"></span></h3>
   </div>
   <script src="/assets/bundle.js"></script>
