--- a/views/appBoards.handlebars
+++ b/views/appBoards.handlebars
@@ -2,7 +2,12 @@
 <head>
     <meta charset="utf-8"/>
     <title>Co-Lab</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+    <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
     <link rel="shortcut icon" href="/assets/img/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -10,60 +15,11 @@
 <body>
 <nav><a href="/login"><img id="logo" class="logo" src="/assets/img/logo.png" alt="logo"/></a>
     <button class="btn btn-link navlink"><a href="/logout">Log out</a></button>
-    <button class="btn btn-link navlink"><a href="/changepass">Change Password</a></button>
+    <button class="btn btn-link navlink"><a id="changePassButton" href="/changepass">Change Password</a></button>
 </nav>
 
-<section id="boards">
-    {{#if boards}}
-        <!-- Boards container -->
-        <div class="remainingBoards">
-            <!-- Boards remaining in plan -->
-            <h3 class="boardsLeft">Free Boards Remaining: {{math 5 "-" count}}</h3>
-            <div class="premium">
-                <h6 class="premiumCTA">Want to upgrade?</h6>
-                <button class="btn btn-link premiumButton"><a href="/upgrade">Upgrade</a></button>
-            </div>
-        </div>
-        {{#each boards}}
-            <!-- Board container -->
-            <div class="board">
-                <h4 class="boardLabel">Name: {{this.name}}</h4>
-                {{#if this.tickets}}
-                    <h4 class="boardLabel">Tickets: {{this.tickets.length}}</h4>
-                {{else}}
-                    <h4 class="boardLabel">Tickets: None</h4>
-                {{/if}}
-                <div class="boardInfo">
-                    <!-- Creates navigate and delete forms from index for each board -->
-                    <form id={{concat "boardNavForm" @index}} name={{concat "boardNavForm" @index}} action="/boardNav" method="POST" class="functionForm">
-                        <input type="hidden" name="_csrf" value={{../csrfToken}} />
-                        <input type="hidden" name="_id" value={{this.id}} />
-                        <input class="formSubmit" type="submit" value="View"/>
-                    </form>
-                    <form id={{concat "boardDeleteForm" @index}} name={{concat "boardDeleteForm" @index}} action="/deleteBoard" method="delete" class="functionForm">
-                        <input type="hidden" name="_csrf" value={{../csrfToken}} />
-                        <input type="hidden" name="_id" value={{this.id}} />
-                        <input class="formSubmit" type="submit" value="X"/>
-                    </form>
-                </div>
-            </div>
-        {{/each}}
-    {{else}}
-        <h3 class="emptyBoards">No Boards</h3>
-    {{/if}}
-</section>
-<section id="makeBoard">
-    <div class="boardFormContainer">
-        <form id="boardForm" name="boardForm" action="/makeBoard" method="POST" class="boardForm">
-            <div class="row">
-                <input id="boardName" class="formInput" class="form-control" type="text" name="name" placeholder="Name"/>
-                <input type="hidden" name="_csrf" value={{csrfToken}} />
-                <input type="hidden" name="boardCount" value={{count}} />
-                <input class="formSubmit" type="submit" value="Make Board" />
-            </div>
-        </form>
-    </div>
-</section>
+<section id="boards"></section>
+<section id="makeBoard"></section>
 <div id="consoleMessage" class="required">
     <h3><span id="errorMessage"></span></h3>
 </div>
