Groundwork for sharing, need to edit how ticket and comments are grabbed (By ID over owner)

--- a/views/appBoards.handlebars
+++ b/views/appBoards.handlebars
@@ -19,6 +19,7 @@
 </nav>
 
 <section id="boards"></section>
+<section id="sharedBoards"></section>
 <section id="makeBoard"></section>
 <div id="consoleMessage" class="required">
     <h3><span id="errorMessage"></span></h3>
